# ofxEmotiBit

./: .gitignore  LICENSE  README.md  WORKFLOWS.md  dependencies.json
.github/workflows/: build-all-on-linux.yaml  build-all-on-macos.yml  build-all-on-win.yaml  check-installer-project-version.yml  create-draft-release.yml  linux-workflows.yaml  reusable-workflow-build-dataParser-linux.yml  reusable-workflow-build-oscilloscope-linux.yml  reusable-workflow-test-dataParser-linux.yml  reusable-workflow-test-oscilloscope-linux.yml  test-powershell.yml  tests-EmotiBitDataParser.yaml  upload-build-artifact-mac.yml  upload-build-artifact-win.yml  validate-version-linux.yml  win-test.yml
EmotiBitDataParser/: EmotiBitDataParser.sh  EmotiBitDataParser.sln  EmotiBitDataParser.vcxproj  EmotiBitDataParser.vcxproj.filters  Project.xcconfig  addons.make  icon.rc  openFrameworks-Info.plist
EmotiBitDataParser-Installer/: EmotiBitDataParser-Installer.sln
EmotiBitDataParser-Installer/EmotiBitDataParser-Installer/: EmotiBitDataParser-Installer.vdproj
EmotiBitDataParser/EmotiBitDataParser.xcodeproj/: project.pbxproj
EmotiBitDataParser/EmotiBitDataParser.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  EmotiBitDataParser Debug.xcscheme  EmotiBitDataParser Release.xcscheme  Release.xcscheme
EmotiBitDataParser/src/: main.cpp  ofApp.cpp  ofApp.h
EmotiBitFirmwareInstaller/: EmotiBitFirmwareInstaller.sln  EmotiBitFirmwareInstaller.vcxproj  EmotiBitFirmwareInstaller.vcxproj.filters  ReadMe.md  addons.make  icon.rc
EmotiBitFirmwareInstaller/EmotiBitFirmwareInstaller.xcodeproj/: project.pbxproj
EmotiBitFirmwareInstaller/src/: ThreadedSystemCall.cpp  ThreadedSystemCall.h  ofApp.cpp  ofApp.h
EmotiBitIcons/: EmotiBit_Logo.icns
EmotiBitIcons/macOS/: EmotiBit.icns
EmotiBitInstaller/: EmotiBit.sln  EmotiBitInstaller.iss  EmotiBitInstaller.sln  get_version.ps1
EmotiBitInstaller/EmotiBitInstaller/: EmotiBitInstaller.vdproj
EmotiBitOscilloscope/: EmotiBitOscilloscope.sln  EmotiBitOscilloscope.vcxproj  EmotiBitOscilloscope.vcxproj.filters  Project.xcconfig  addons.make  config.make  config.txt
EmotiBitOscilloscope-Installer/: EmotiBitOscilloscope-Installer.sln
EmotiBitOscilloscope-Installer/EmotiBitOscilloscope-Installer/: EmotiBitOscilloscope-Installer.vdproj
EmotiBitOscilloscope/EmotiBitOscilloscope-arm.xcodeproj/: project.pbxproj
EmotiBitOscilloscope/EmotiBitOscilloscope.xcodeproj/: project.pbxproj
EmotiBitOscilloscope/EmotiBitOscilloscope.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EmotiBitOscilloscope/Emotibit1.xcodeproj/: project.pbxproj
EmotiBitOscilloscope/src/: AuxCxnController.cpp  AuxCxnController.h  AuxInstrQ.cpp  AuxInstrQ.h  DoubleBuffer.h  EmotiBitLsl.cpp  EmotiBitWiFiHost.cpp  EmotiBitWiFiHost.h  main.cpp  ofApp.cpp  ofApp.h
EmotiBitSlidePlayer/: CMakeLists.txt  Doxyfile  EmotiBitSlidePlayer.sln  EmotiBitSlidePlayer.vcxproj  README.md  config.make  icon.rc
EmotiBitSlidePlayer/EmotiBitSlidePlayer.xcodeproj/: project.pbxproj
EmotiBitSlidePlayer/src/: main.cpp  ofApp.cpp
EmotiBitSlidePlayer/tests/: test_parseSettings.cpp
EmotiBitUtils/: EmotiBitPacket.cpp  EmotiBitPacket.h
EmotiBitUtils/TestCode/py/: LSLCheck.ipynb
Oscilloscope-Installer/: Oscilloscope-Installer.sln
Oscilloscope-Installer/Oscilloscope-Installer/: Oscilloscope-Installer.vdproj
SlidePlayer/: .clang-format  .clang-tidy  CMakeLists.txt  SlidePlayer.sln  SlidePlayer.vcxproj  compile_flags.txt  emotibitSlidePlayerSettings.json
SlidePlayer/SlidePlayer.xcodeproj/: project.pbxproj
SlidePlayer/SlidePlayer.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme  SlidePlayer Release.xcscheme
SlidePlayer/src/: ofApp.cpp  ofApp.h
SlidePlayer/tests/: test_parseSettings.cpp  test_updateCurrentState.cpp
TCPServerExample/: networkTcpServerExample.vcxproj  networkTcpServerExample.vcxproj.filters
TCPServerExample/src/: ofApp.cpp  ofApp.h
docs/: BUILD_AND_RELEASE.md
ofxEmotiBitWiFiTest/: addons.make  ofxEmotiBitWiFiTest.sln  ofxEmotiBitWiFiTest.vcxproj  ofxEmotiBitWiFiTest.vcxproj.filters
ofxEmotiBitWiFiTest/src/: ofApp.cpp  ofApp.h
ofxEmotiBitWiFiTest01/: addons.make  networkTcpServerExample.vcxproj  networkTcpServerExample.vcxproj.filters  ofxEmotiBitWiFiTest01.sln
ofxEmotiBitWiFiTest01/src/: ofApp.cpp  ofApp.h
scripts/: download-dependencies.sh  record-dependencies.sh
src/: ArduinoString.h  DoubleBuffer.h  EmotiBitData.cpp  EmotiBitData.h  EmotiBitLsl.cpp  EmotiBitLsl.h  EmotiBitOfUtils.cpp  EmotiBitOfUtils.h  EmotiBitPacket.cpp  EmotiBitPacket.h  EmotiBitTestingHelper.cpp  EmotiBitTestingHelper.h  EmotiBitWiFiHost.cpp  EmotiBitWiFiHost.h  PatchboardJson.cpp  PatchboardJson.h  SoftwareVersionChecker.cpp  SoftwareVersionChecker.h  String.h  ofxEmotiBitVersion.h
src/Signal/: Periodizer.cpp  Periodizer.h
tests/EmotiBitDataParser/: README.md  find-missing-typetags.sh  find_missing_typetags.sh
tests/EmotiBitDataParser/check_parsed_data/: README.md  md5_creator.sh  run_test.sh
tests/EmotiBitDataParser/composite_payloads/: README.md  create_test_data.py  md5_creator.sh  run_test.sh
tests/EmotiBitDataParser/composite_payloads/expected_output_hash/: test_data.md5  (+4 more)
tests/EmotiBitDataParser/find_unused_typetags/: README.md  run_test.sh
tests/EmotiBitDataParser/parsed_output_format/: README.md  md5_create.sh  parsedDataFormat.json  run_test.sh
tests/EmotiBitDataParser/request_data/: README.md  run_test.sh
tests/EmotiBitDataParser/sample_data/: 2025-03-20_12-09-40-822726.csv  2025-06-27_09-56-59-929206.csv
tests/EmotiBitDataParser/test-0_parser_output/: README.md  md5_check.sh  run_test.sh
tests/EmotiBitDataParser/test-2_parsed_output_format/: README.md
tests/EmotiBitDataParser/timesync_parsing/: README.md  md5_creator.sh  run_test.sh
tests/EmotiBitInstaller/check-installer-version/: run_test.sh
tests/EmotiBitOscilloscope-ConsoleControl/: EC.sh  ED.sh  RB.sh  RE.sh  testing_seq.sh
tests/EmotiBitOscilloscope/control-automation/: EC.sh  RE.sh  README.md  UN.sh  run_test.sh  template.json  test_auxillary_control.sh
tests/py/: README.md
(+157 files in other folders)
